--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,21 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #252525;
     --foreground: #ededed;
+    --primary: #39A7D3;
   }
 }
 
 html,
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  max-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -19,7 +27,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-space-grotesk);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
