--- a/src/sections/Greeting/Greeting.module.css
+++ b/src/sections/Greeting/Greeting.module.css
@@ -1,3 +1,10 @@
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .hola {
   position: absolute;
   top: 50%;
