--- a/src/components/CommandBar/CommandBar.module.css
+++ b/src/components/CommandBar/CommandBar.module.css
@@ -1,5 +1,5 @@
 .container {
-  animation: open 500ms ease-in 1s forwards;
+  animation: slideUp 1s ease-in forwards;
   position: fixed;
   bottom: 0;
   z-index: 1000;
@@ -8,13 +8,13 @@
   background-color: #282828;
   box-shadow: inset 0 0 16px #212121;
   width: 100%;
-  height: 0px;
-  padding: 0;
+  height: 3rem;
+  padding: 1rem;
   font-family: var(--font-cutive-mono);
 }
 
 .prompt {
-  animation: appear 500ms ease-in 1250ms forwards;
+  animation: appear 1s ease-in 1s forwards;
   visibility: hidden;
   user-select: none;
   white-space: pre;
@@ -36,9 +36,10 @@
 }
 
 .caret {
-  animation: blink 1s step-start infinite;
+  animation: appear 1s ease-in 1s forwards, blink 1s step-start infinite;
   margin-left: 1px;
   border-bottom: solid 1px white;
+  visibility: hidden;
 } 
 
 @keyframes blink {
@@ -50,14 +51,12 @@
   }
 }
 
-@keyframes open {
-  0% {
-    height: 0;
-    padding: 0 1rem;
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
   }
-  100% {
-    height: 3rem;
-    padding: 1rem;
+  to {
+    transform: translateY(0);
   }
 }
 
