--- a/src/sections/Main/Main.module.css
+++ b/src/sections/Main/Main.module.css
@@ -1,4 +1,5 @@
 .contentContainer {
+  animation: appear 500ms ease-in 1s forwards;
   position: fixed;
   top: 10rem;
   display: block;
@@ -7,4 +8,14 @@
   width: 100%;
   scroll-behavior: smooth;
   overflow-y: auto;
+  opacity: 0;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
