added about me, scafoled projects and contact, WIP scroll in main, huevos d pascua

--- a/src/sections/Banner/Banner.module.css
+++ b/src/sections/Banner/Banner.module.css
@@ -21,6 +21,10 @@
   text-shadow: 0 0 2px white;
 }
 
+.bio {
+  text-align: center;
+}
+
 @keyframes slideDown {
   from {
     transform: translateY(-10rem);
