--- a/src/sections/Main/Main.module.css
+++ b/src/sections/Main/Main.module.css
@@ -2,14 +2,10 @@
   animation: appear 500ms ease-in 1s forwards;
   position: fixed;
   top: 10rem;
-  display: block;
+  display: flex;
+  width: 100%;
   height: calc(100vh - 13rem);
   padding: 0;
-  width: 100%;
-  /* scroll-snap-type: y mandatory; */
-  scroll-padding-top: 0;
-  scroll-behavior: smooth;
-  overflow-y: auto;
   opacity: 0;
 }
 
