--- a/src/sections/Main/Main.module.css
+++ b/src/sections/Main/Main.module.css
@@ -9,6 +9,15 @@
   opacity: 0;
 }
 
+.terminal {
+  display: flex;
+  justify-content: flex-end;
+  box-shadow: 0 0 10px #000;
+  background-color: #141414;
+  margin: 20px;
+  width: 100%;
+}
+
 @keyframes appear {
   from {
     opacity: 0;
