--- a/src/components/Toast/Toast.module.css
+++ b/src/components/Toast/Toast.module.css
@@ -1,13 +1,34 @@
 .container {
-  animation: slideUp 500ms ease-in-out, fadeOut 500ms ease-out 1500ms forwards;
+  animation: slideUp 500ms ease-in-out, fadeOut 500ms ease-out 4500ms forwards;
   position: absolute;
   z-index: 1000;
   bottom: 0;
   display: flex;
-  margin: 20px;
-  padding: 20px;
+  align-items: center;
+  margin: 10px;
+  padding: 10px 20px;
   border-radius: 8px;
-  background-color: magenta;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(8px);
+}
+
+.closeButton {
+  color: currentColor;
+  gap: 18px;
+
+  span {
+    transition: all 250ms ease-in-out;
+    position: absolute;
+    right: 0;
+    font-size: inherit;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  span:hover {
+    cursor: pointer;
+    /* color: color-mix(in srgb, currentColor 50%, black 50%); */
+    background-color: rgba(255, 255, 255, 0.2);
+  }
 }
 
 @keyframes slideUp {
