--- a/src/components/Toast/Toast.module.css
+++ b/src/components/Toast/Toast.module.css
@@ -1,8 +1,6 @@
 .container {
   animation: slideUp 500ms ease-in-out, fadeOut 500ms ease-out 4500ms forwards;
-  position: absolute;
   z-index: 1000;
-  bottom: 0;
   display: flex;
   align-items: center;
   margin: 10px;
@@ -10,6 +8,7 @@
   border-radius: 8px;
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(8px);
+  pointer-events: auto;
 }
 
 .closeButton {
@@ -26,7 +25,6 @@
 
   span:hover {
     cursor: pointer;
-    /* color: color-mix(in srgb, currentColor 50%, black 50%); */
     background-color: rgba(255, 255, 255, 0.2);
   }
 }
