made terminal scrollable, updated styles in terminal, banner and commandbar, updated projects section - WIP need to pull logic for projects into hooks, add tech stack and add planned projects list

--- a/src/sections/AboutMe/AboutMe.module.css
+++ b/src/sections/AboutMe/AboutMe.module.css
@@ -1,4 +1,13 @@
+.container {
+  align-content: flex-end;
+  overflow-y: auto;
+  height: 100%;
+  padding: 20px;
+}
+
 .art {
+  display: flex;
+  justify-content: center;
   color: yellow;
 }
 
