--- a/src/components/CommandBar/CommandBar.module.css
+++ b/src/components/CommandBar/CommandBar.module.css
@@ -7,9 +7,10 @@
   align-items: center;
   background-color: #282828;
   box-shadow: inset 0 0 16px #171717;
+  border-top: solid 1px #5E5E5E;
   width: 100%;
   height: 3rem;
-  padding: 1rem;
+  padding: 0 1rem;
   font-family: var(--font-cutive-mono);
 }
 
@@ -23,7 +24,7 @@
 .commandInput {
   flex: 1;
   display: inline-flex;
-  align-items: flex-end;
+  align-items: center;
   outline: none;
   margin-left: 0.5rem;
   min-height: 1rem;
