--- a/src/sections/Banner/Banner.module.css
+++ b/src/sections/Banner/Banner.module.css
@@ -4,9 +4,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #282828;
+  background-color: #3C3C3C;
   backdrop-filter: blur(10px);
-  box-shadow: inset 0 0 16px #171717;
+  border-bottom: solid 1px #5E5E5E;
   width: 100%;
   height: 10rem;
   opacity: 0;
